2002-02-06  Havoc Pennington  <hp@redhat.com>

	* gtk/gtktextchild.c: Add warnings if you try to use a child
	anchor that isn't inside a buffer. Really kind of lame; 
	we should separate the anchor from the buffer. But not worth 
	fixing for now. #70601

Wed Feb  6 18:25:24 2002  Kristian Rietveld  <kris@gtk.org>

	* gtk/gtktreemodelsort.c: rip out all the debugging ifdefs, as
	modelsort seems to be stable (and nobody complained :)

Tue Feb  5 19:13:42 2002  Owen Taylor  <otaylor@redhat.com>

	* gdk/x11/gdkgeometry-x11.c (gdk_window_queue): Keep
	the length of the anti-expose queue finite, by if
	it gets too long, first doing a XSync() and checking
	the event queue, and if that doesn't work, simply
	discarding all anti-expose items in the queue.

	* gdk/x11/gdkdnd-x11.c (gdk_window_cache_filter): Fix ordering
	on ConfigureNotify (#56349, Thomas Leonard)

2002-02-05  Havoc Pennington  <hp@redhat.com>

	* gtk/gtkimage.c (gtk_image_expose): offset area being gotten from
	pixmap by the align/padding offsets, so we don't get warnings
	in gdk_pixbuf_get_from_drawable (and so it works, of course)

2002-02-05  Matthias Clasen  <matthiasc@poet.de>

	* gtk/gtkrc.c (gtk_rc_parse_file): Remove a (now) misleading comment.

2002-02-05  Federico Mena Quintero  <federico@ximian.com>

	* gdk/gdkwindow.h: Do not #include <gdk/gdkwindow.h>.

Tue Feb  5 22:54:16 2002  Kristian Rietveld  <kris@gtk.org>

	* gtk/gtkliststore.c (gtk_list_store_insert_after): let's set the
	path, which we're going to pass with the emission of row_inserted, to
	the iter we inserted and not its sibling.

2002-02-04 Padraig O'Briain <padraig.obriain@sun.com>

	* gtk/gtkmenu.c (gtk_menu_popup):
	Fix leak of GdkEvent (#70519)

Mon Feb  4 10:40:28 2002  Owen Taylor  <otaylor@redhat.com>

	* gtk/gtkstyle.c (gtk_default_draw_resize_grip):
	Fix from Matthias Clasen to clear background appropriately
	for theme by calling gtk_style_apply_default_background().
	(#70449)
