@@ -1,5 +1,12 @@
 2002-02-06  Havoc Pennington  <hp@redhat.com>
 
+	* gtk/gtktextview.c (gtk_text_view_scroll_hpages): remove unused variable
+	(gtk_text_view_get_window): add warning about how you
+	can't get the private window. #70683, and avoid default: in the
+	switch so we get "enum value unhandled" warnings
+
+2002-02-06  Havoc Pennington  <hp@redhat.com>
+
 	* gtk/gtktextchild.c: Add warnings if you try to use a child
 	anchor that isn't inside a buffer. Really kind of lame; 
 	we should separate the anchor from the buffer. But not worth 
